-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0
-
9364c3fcc8c98f70aceaac5b72823e290504cb2a (qt/qttools/5.12)
Steps to reproduce the issue:
1. Run attached test application
2. It's using QT_TRID_NOOP() inside of a QML ListElement and uses qsTrId() in the delegate
-> Only the first singular form translation is used from the .qm file. As soon as the second parameter of qsTrId is more than 1 the translation is not loaded and the plain ID is shown.
Expected: Also the plural translations are loaded
Probably related to this old issue: QTBUG-3945
Tested on OS X 10.11