lupdate: Do not touch a translated file without target language

[ChangeLog][lupdate] lupdate will now generate an error if it is asked
to update a .ts file with translations, but without a target language.
This is to ensure that plural translations are not destroyed.

Fixes: QTBUG-53775
Change-Id: I646c1f2ec42a32dbc1a4676ad784887613607b78
Reviewed-by: Kai Koehne <kai.koehne@qt.io>